# claude-librarian

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
claude_librarian/: __init__.py  _lib.py  apply_edges.py  assemble_finding.py  assemble_paper.py  bibtex.py  bibtex_sync.py  citation_match.py  cleaning.py  cli.py  config.py  create_stubs.py  fetch_paper.py  ingest_drivers.py  init_vault.py  lint.py  log.py  triage.py  vault_scan.py  zotero.py
claude_librarian/agents/: finding-extractor.md  finding-linker.md  lite-drafter.md  metadata-extractor.md
claude_librarian/skills/paper-ingest/: SKILL.md
claude_librarian/skills/paper-lint/: SKILL.md
claude_librarian/skills/paper-query/: SKILL.md
claude_librarian/skills/paper-review/: SKILL.md
claude_librarian/sources/: __init__.py  scholar_inbox.py  zotero_inbox.py
claude_librarian/templates/: CLAUDE.md  author.md  field.md  index.md  log.md  thread.md
claude_librarian/templates/dot-obsidian/: core-plugins.json  graph.json
claude_librarian/templates/views/: by-author.md  by-field.md  contradictions.md  high-credibility.md  recent-papers.md  threads.md
claude_librarian/workflows/: paper-ingest-extract.js  paper-ingest-link.js
