[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-librarian"
version = "0.1.0"
description = "An LLM-maintained research wiki: ingest papers from Zotero and Scholar Inbox, keep Zotero tidy, and build a finding-level knowledge graph in a local Obsidian vault."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Marvin Sextro" }]
keywords = ["research", "obsidian", "zotero", "scholar-inbox", "knowledge-graph", "papers", "arxiv", "claude"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pyyaml>=6.0",
    "pymupdf>=1.24",
    "pyzotero>=1.6",
    "scholarinboxcli>=0.1.3",
    "bibtex-updater>=1.2",
]

[project.urls]
Homepage = "https://github.com/marvinsxtr/claude-librarian"
Repository = "https://github.com/marvinsxtr/claude-librarian"

[project.scripts]
lib = "claude_librarian.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["claude_librarian"]

[tool.hatch.build.targets.sdist]
include = ["claude_librarian", "README.md", "LICENSE", "NOTICE"]
